refactor account dialog

--- a/BCX_Wallet/library_res/src/main/res/values/styles.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/styles.xml
@@ -18,4 +18,11 @@
         <item name="android:listSelector">@null</item>
         <item name="android:scrollbars">none</item>
     </style>
+
+    <style name="BottomSheetDialog" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/bottomSheetStyleWrapper</item>
+    </style>
+    <style name="bottomSheetStyleWrapper" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
 </resources>
