--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_modify_password.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_modify_password.xml
@@ -196,7 +196,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/dp_72"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <Button
                 android:layout_width="match_parent"
@@ -210,7 +210,42 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp_16"
                 binding:onClickCommand="@{viewModel.modifyPasswordOnClickCommand}" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_36"
+                android:layout_marginRight="@dimen/dp_15"
+                android:background="@drawable/register_account_regiex"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingTop="@dimen/dp_15"
+                android:paddingRight="@dimen/dp_10"
+                android:paddingBottom="@dimen/dp_15">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/register_pwd_title"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_12"
+                    android:typeface="@{@string/TOTAL_ASSET}"
+                    android:layout_marginTop="@dimen/dp_10"
+                    tools:ignore="SpUsage" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_6"
+                    android:text="@string/module_login_password_rule"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp_12"
+                    tools:ignore="SpUsage" />
+            </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
 
 </layout>
