add old pwd visible control

--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_modify_password.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_modify_password.xml
@@ -72,13 +72,17 @@
                 android:text="@string/module_mine_modify_password_current"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
-
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.75"
+                android:weightSum="10">
             <EditText
                 android:id="@+id/et_set_password"
                 style="@style/editText_style"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.75"
+                android:layout_weight="8"
                 android:hint="@string/module_mine_modify_password_current_hint"
                 android:inputType="textPassword"
                 android:maxLength="12"
@@ -86,6 +90,21 @@
                 android:paddingBottom="@dimen/dp_22"
                 android:text="@={viewModel.currentPassword}" />
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:gravity="right|center_vertical"
+                android:paddingLeft="@dimen/dp_12"
+                android:paddingRight="@dimen/dp_12">
+
+                <ImageView
+                    android:id="@+id/iv_old_pwd_visible"
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:src="@drawable/hidden_pwd" />
+            </LinearLayout>
+            </LinearLayout>
         </com.cocos.library_base.widget.LinearLinearLayout>
 
 
