--- a/BCX_Wallet/module_login/src/main/res/layout/activity_register.xml
+++ b/BCX_Wallet/module_login/src/main/res/layout/activity_register.xml
@@ -97,6 +97,7 @@
                     android:hint="@string/module_login_username_hint"
                     android:inputType="text"
                     android:maxLength="63"
+                    android:maxLines="1"
                     android:paddingTop="@dimen/dp_8"
                     android:paddingBottom="@dimen/dp_16"
                     android:text="@={viewModel.accountName}"
@@ -136,6 +137,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="8"
                     android:hint="@string/module_login_password_hint"
+                    android:maxLines="1"
                     android:inputType="textPassword"
                     android:paddingTop="@dimen/dp_8"
                     android:paddingBottom="@dimen/dp_16"
@@ -188,6 +190,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/module_login_confirm_password_hint"
+                    android:maxLines="1"
                     android:inputType="textPassword"
                     android:paddingTop="@dimen/dp_8"
                     android:paddingBottom="@dimen/dp_16"
