--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_modify_password.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_modify_password.xml
@@ -85,7 +85,7 @@
                 android:layout_weight="8"
                 android:hint="@string/module_mine_modify_password_current_hint"
                 android:inputType="textPassword"
-                android:maxLength="12"
+                android:maxLines="1"
                 android:paddingTop="@dimen/dp_22"
                 android:paddingBottom="@dimen/dp_22"
                 android:text="@={viewModel.currentPassword}" />
@@ -145,7 +145,7 @@
                     android:layout_weight="8"
                     android:hint="@string/module_login_password_hint"
                     android:inputType="textPassword"
-                    android:maxLength="12"
+                    android:maxLines="1"
                     android:paddingTop="@dimen/dp_22"
                     android:paddingBottom="@dimen/dp_22"
                     android:singleLine="true"
@@ -203,6 +203,7 @@
                 android:layout_weight="0.75"
                 android:hint="@string/module_mine_modify_password_confirm_hint"
                 android:inputType="textPassword"
+                android:maxLines="1"
                 android:paddingTop="@dimen/dp_22"
                 android:paddingBottom="@dimen/dp_22"
                 android:text="@={viewModel.confirmPassword}" />
