--- a/BCX_Wallet/library_base/src/main/res/layout/activity_js_webview.xml
+++ b/BCX_Wallet/library_base/src/main/res/layout/activity_js_webview.xml
@@ -46,6 +46,9 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:singleLine="true"
                 android:text="@={viewModel.webTitle}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_18"
